--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
+                  <h3>Angular</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -189,14 +189,14 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
+                  <h3>BootStrap</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Backend Development</h2>
+            <h2 class="experience-sub-title">Backend Development </h2>
             <div class="article-container">
               <article>
                 <img
@@ -206,7 +206,7 @@
                 />
                 <div>
                   <h3>PostgreSQL</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -227,7 +227,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
+                  <h3>c#</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -261,7 +261,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="    "
                 alt="Project 1"
                 class="project-img"
               />
@@ -285,7 +285,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="  "
                 alt="Project 2"
                 class="project-img"
               />
@@ -309,7 +309,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src=""
                 alt="Project 3"
                 class="project-img"
               />
